force-app/main/default/objects/Invoice_item__c/Invoice_item__c.object-meta.xml
<CustomObject>
    <label>Invoice item</label>
    <nameField>
        <displayFormat>InvItem-{000}</displayFormat>
        <label>Invoice item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>