force-app/main/default/objects/Invoice_item__c/fields/Batch_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Batch_Expiry__c</fullName>
    <label>Batch Expiry</label>
    <type>Date</type>
</CustomField>