force-app/main/default/objects/Invoice_item__c/fields/Bill_Amount__c.field-meta.xml
<CustomField>
    <fullName>Bill_Amount__c</fullName>
    <label>Bill Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>