force-app/main/default/objects/Invoice_item__c/fields/Bill_Number__c.field-meta.xml
<CustomField>
    <fullName>Bill_Number__c</fullName>
    <label>Bill_Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>