force-app/main/default/objects/Invoice_item__c/fields/Bill_to_party_name__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_party_name__c</fullName>
    <label>Bill to party name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>