force-app/main/default/objects/Invoice_item__c/fields/Delivery_Status2__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Status2__c</fullName>
    <formula>Text( Delivery_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Status</label>
    <type>Text</type>
</CustomField>