force-app/main/default/objects/Invoice_item__c/fields/EID__c.field-meta.xml
<CustomField>
    <fullName>EID__c</fullName>
    <externalId>true</externalId>
    <label>EID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>