force-app/main/default/objects/Invoice_item__c/fields/FOC_Price__c.field-meta.xml
<CustomField>
    <fullName>FOC_Price__c</fullName>
    <formula>Price_per_unit__c == 0.01</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FOC Price</label>
    <type>Checkbox</type>
</CustomField>