force-app/main/default/objects/Invoice_item__c/fields/Grant_Total__c.field-meta.xml
<CustomField>
    <fullName>Grant_Total__c</fullName>
    <label>Grant Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>