force-app/main/default/objects/Invoice_item__c/fields/GRN_Non_Saleable_Quantity__c.field-meta.xml
<CustomField>
    <fullName>GRN_Non_Saleable_Quantity__c</fullName>
    <label>GRN Non-Saleable Quantity</label>
    <summarizedField>Goods_Received_Note_Item__c.Received_Nonsaleable_Quantity__c</summarizedField>
    <summaryForeignKey>Goods_Received_Note_Item__c.Invoice_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>