force-app/main/default/objects/Invoice_item__c/fields/IGST_Amt__c.field-meta.xml
<CustomField>
    <fullName>IGST_Amt__c</fullName>
    <label>IGST Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>