force-app/main/default/objects/Invoice_item__c/fields/Invoice_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Customer_Name__c</fullName>
    <formula>Invoice__r.Store__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Customer Name</label>
    <type>Text</type>
</CustomField>