force-app/main/default/objects/Invoice_item__c/fields/Invoice_Name__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Name__c</fullName>
    <formula>Invoice__r.Name</formula>
    <label>Invoice Name</label>
    <type>Text</type>
</CustomField>