force-app/main/default/objects/Invoice_item__c/fields/Invoice_OwnerId__c.field-meta.xml
<CustomField>
    <fullName>Invoice_OwnerId__c</fullName>
    <formula>Invoice__r.OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice OwnerId</label>
    <type>Text</type>
</CustomField>