force-app/main/default/objects/Invoice_item__c/fields/Invoice_SAP_Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>Invoice_SAP_Customer_Code__c</fullName>
    <formula>Invoice__r.Store__r.SAP_Customer_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice SAP Customer Code</label>
    <type>Text</type>
</CustomField>