force-app/main/default/objects/Invoice_item__c/fields/Invoice_Ship_to_party_Name__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Ship_to_party_Name__c</fullName>
    <formula>Invoice__r.Ship_To_Party__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Ship to party Name</label>
    <type>Text</type>
</CustomField>