force-app/main/default/objects/Invoice_item__c/fields/Material_Desc__c.field-meta.xml
<CustomField>
    <fullName>Material_Desc__c</fullName>
    <label>Material Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>