force-app/main/default/objects/Invoice_item__c/fields/NET_WEIGHT__c.field-meta.xml
<CustomField>
    <fullName>NET_WEIGHT__c</fullName>
    <formula>Qyt_in_Each__c   * SKU__r.Net_Weight__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NET WEIGHT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>