force-app/main/default/objects/Invoice_item__c/fields/Net_Weight_in_KG__c.field-meta.xml
<CustomField>
    <fullName>Net_Weight_in_KG__c</fullName>
    <formula>Qyt_in_Each__c * SKU__r.Net_Weight__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Weight in KG</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>