force-app/main/default/objects/Invoice_item__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bizom Order</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Invoice items</relationshipLabel>
    <relationshipName>Invoice_items</relationshipName>
    <type>Lookup</type>
</CustomField>