force-app/main/default/objects/Invoice_item__c/fields/Order_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_Owner_Id__c</fullName>
    <formula>CASESAFEID(Order__r.OwnerId  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Owner Id</label>
    <type>Text</type>
</CustomField>