force-app/main/default/objects/Invoice_item__c/fields/Pending_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Pending_Quantity__c</fullName>
    <formula>Qyt_in_Each__c  - (GRN_Non_Saleable_Quantity__c + GRN_Saleable_Quantity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>