force-app/main/default/objects/Invoice_item__c/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <label>Plant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>