force-app/main/default/objects/Invoice_item__c/fields/Price_per_case__c.field-meta.xml
<CustomField>
    <fullName>Price_per_case__c</fullName>
    <label>Price per case</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>