force-app/main/default/objects/Invoice_item__c/fields/Price_per_unit__c.field-meta.xml
<CustomField>
    <fullName>Price_per_unit__c</fullName>
    <label>Price_per_unit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>