force-app/main/default/objects/Invoice_item__c/fields/Qyt__c.field-meta.xml
<CustomField>
    <fullName>Qyt__c</fullName>
    <label>Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>