force-app/main/default/objects/Invoice_item__c/fields/Qyt_in_Each__c.field-meta.xml
<CustomField>
    <fullName>Qyt_in_Each__c</fullName>
    <label>Qty in Each</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>