force-app/main/default/objects/Invoice_item__c/fields/SAP_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>SAP_Order_Id__c</fullName>
    <label>Order ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>