force-app/main/default/objects/Invoice_item__c/fields/Ship_to_party_name__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_party_name__c</fullName>
    <label>Ship to party name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>