force-app/main/default/objects/Invoice_item__c/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Material</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Invoice items (Product)</relationshipLabel>
    <relationshipName>Invoice_items</relationshipName>
    <type>Lookup</type>
</CustomField>