force-app/main/default/objects/Invoice_item__c/fields/SKU_Code_From_API__c.field-meta.xml
<CustomField>
    <fullName>SKU_Code_From_API__c</fullName>
    <label>SKU Code From API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>