force-app/main/default/objects/Invoice_item__c/fields/StoreId__c.field-meta.xml
<CustomField>
    <fullName>StoreId__c</fullName>
    <formula>CASESAFEID( Invoice__r.Store__c )</formula>
    <label>StoreId</label>
    <type>Text</type>
</CustomField>