force-app/main/default/objects/Invoice_item__c/fields/Total_Amount_Without_GST__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Without_GST__c</fullName>
    <label>Total Amount Without GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>