force-app/main/default/objects/Invoice_item__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>Unit</label>
    <length>100</length>
    <type>Text</type>
</CustomField>