force-app/main/default/objects/Invoice_item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Invoice__c</columns>
    <columns>Order__c</columns>
    <columns>Bill_to_party_name__c</columns>
    <columns>SKU__c</columns>
    <columns>Bill_Date__c</columns>
    <columns>Bill_Amount__c</columns>
    <columns>Qyt__c</columns>
    <columns>NET_WEIGHT__c</columns>
    <columns>Net_Weight_in_KG__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>